Fixes #2 White space beneath the appbar on blank page

--- a/themes/metro/jquery.mobile.metro.theme.css
+++ b/themes/metro/jquery.mobile.metro.theme.css
@@ -16,6 +16,14 @@ body
     letter-spacing: 0.02em;
 }
 
+body.ui-overlay-a {
+    background-color: black;
+}
+
+body.ui-overlay-b {
+    background-color: white;
+}
+
 h1, h2, h3, h4, h5, h6
 {
     display: block;
